--- a/color_game.html
+++ b/color_game.html
@@ -19,8 +19,8 @@
     	<div id="stripe">
     		<button id="reset">New Colors</button>
     		<span id="message"></span>
-    		<button id="easy-button">easy</button>
-    		<button id="hard-button" class="selected">hard</button>
+    		<button class="mode">easy</button>
+    		<button class="mode selected">hard</button>
     	</div>
 		<div id="container">
 			<div class="square"></div>
